src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Clicking this button will switch the project to Active</description>
        <inlineHelpText>Clicking this button will switch the project to Active and update the record type/page layout</inlineHelpText>
        <label>Activate Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Department__c</fullName>
        <label>Funding Department</label>
        <picklist>
            <controllingField>Project_Funding_Secured__c</controllingField>
            <picklistValues>
                <fullName>G&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <label>LOE</label>
        <summarizedField>Story__c.LOE__c</summarizedField>
        <summaryForeignKey>Story__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_2_SSD__c</fullName>
        <label>Milestone Date 2 (SSD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_3_Dev_Complete__c</fullName>
        <label>Milestone Date 3 (Dev Complete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_4_UAT__c</fullName>
        <label>Milestone Date 4 (UAT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_5_Deployment__c</fullName>
        <label>Milestone Date 5 (Deployment)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_BRD__c</fullName>
        <label>Milestone Date 1 (BRD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_1__c</fullName>
        <label>Milestone Status 1</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_2__c</fullName>
        <label>Milestone Status 2</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_3__c</fullName>
        <label>Milestone Status 3</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Product Owner)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Funding_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Funding Secured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requesting_Gropup__c</fullName>
        <label>Requesting Group</label>
        <picklist>
            <picklistValues>
                <fullName>BIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>CASE(Status__c , 
&quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16),
&quot;Backlog&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Blocked&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Planned&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx2&quot;,&quot;Amber&quot;,16,16), 
&quot;In Progress&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16), 
&quot;Ready for QA&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),
&quot;Complete&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),&quot;&quot;)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Burn-In Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label>Team Members</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>estimated_effort_weeks__c</fullName>
        <label>Estimated Effort (weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Planned</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Related_Project__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Active and Planned (excludes Completed)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Status_Flag__c</columns>
        <columns>Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Marketing_Projects</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Funding_Department__c</field>
            <operation>includes</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Funding_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>,In Progress,Ready for QA</value>
        </filters>
        <filters>
            <field>Product_Owner__c</field>
            <operation>equals</operation>
            <value>Jake Lewis</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>JLewi</value>
        </filters>
        <label>My Active Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipeline</fullName>
        <columns>NAME</columns>
        <columns>Requesting_Gropup__c</columns>
        <columns>Funding_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Pipeline</value>
        </filters>
        <label>Pipeline</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Release_EndQ4_FY15</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>lessThan</operation>
            <value>2/1/2015</value>
        </filters>
        <filters>
            <field>Milestone_Date_5_Deployment__c</field>
            <operation>lessOrEqual</operation>
            <value>2/1/2015</value>
        </filters>
        <label>Release by Q4 FY15</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Projects</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Funding_Department__c</field>
            <operation>includes</operation>
            <value>Sales</value>
        </filters>
        <label>Sales Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Active_Project</fullName>
        <active>true</active>
        <label>Active Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pipeline</fullName>
        <active>true</active>
        <label>Pipeline</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Activate_without_funding</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Project_Funding_Secured__c  = FALSE,  ISBLANK(Funding_Department__c))</errorConditionFormula>
        <errorMessage>Projects must be funded and a department specified before activation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Funding_secure_with_no_department</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Project_Funding_Secured__c = TRUE, ISBLANK( Funding_Department__c ) = TRUE)</errorConditionFormula>
        <errorDisplayField>Funding_Department__c</errorDisplayField>
        <errorMessage>At least one funding department must be selected</errorMessage>
    </validationRules>
</CustomObject>